--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,1 +1,81 @@
 @charset "UTF-8";
+/***
+    Balises
+***/
+html{
+    height: 100%;
+    width: 100%;}
+html,body {
+    margin: 0 auto;
+    height: 100%;
+    background-color:#987654;
+    background-color:#000;
+    font-size:100%;
+    color:#789abc;}
+
+h1,h2,h3,h4,h5,h6,h7,h8{
+    color:#abcdef;
+    text-align:center;
+    border-bottom:1px dashed #abcdef;}
+
+a{
+    color:#abcdef; 
+    text-decoration:none;
+    font-weight:bold;
+    display:block;}
+a:hover{color:#fff;}
+a:visited{color:#abcdef;}
+a:visited:hover{color:#fff;}
+ul{
+    list-style-type:none;
+    padding:0;}
+strong{color:#abcdef;}
+
+#nav>ul>li{display:block;}
+#footer>p{text-align:center;}
+
+#cacheAll{
+    background-color: #000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3000;}
+
+input{
+    color: #000;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    background-color: rgba(255, 255, 255, 0.4);
+    height: 30px;
+    outline: none;
+    padding: 0 5px;
+    border-radius: 20px;}
+
+/*
+   Credits of this fallowing part, mainly coming from the tutorial :
+   http://www.grafikart.fr/tutoriels/nodejs/nodejs-socketio-tchat-366
+*/
+#login{
+    background-color: #000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2000;}
+    #login #loginform {
+       position: absolute;
+       left: 0;
+       right: 0;
+       top: 50%;
+       margin-top: -100px;
+       text-align: center; }
+    #login strong {
+       font-size: 20px;
+       color: #FFF; }
+    #login p {
+       color: #FFF;
+       font-size: 16px;
+       padding: 10px;
+       opacity: 0.7; }
